Mejora usuarios de acuerdo a los requisitos. OpenAPI actualizado para cumplir con ellos.
