# proyecto/schema/openapi_liga.yaml
@@ -178,6 +178,72 @@ paths:
             application/json:
               example:
                 message: "Error al iniciar sesión del usuario"
+  /usuarios/recuperar:
+    post:
+      summary: Enviar correo de recuperación de contraseña
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+      responses:
+        '200':
+          description: Correo de recuperación enviado
+          content:
+            application/json:
+              example:
+                message: "Correo de recuperación enviado"
+        '404':
+          description: Usuario no encontrado
+          content:
+            application/json:
+              example:
+                message: "Usuario no encontrado"
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              example:
+                message: "Error al enviar el correo de recuperación"
+  /usuarios/reset/{token}:
+    post:
+      summary: Restablecer la contraseña
+      parameters:
+        - name: token
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Contraseña actualizada correctamente
+          content:
+            application/json:
+              example:
+                message: "Contraseña actualizada correctamente"
+        '400':
+          description: Token inválido o expirado
+          content:
+            application/json:
+              example:
+                message: "Token inválido o expirado"
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              example:
+                message: "Error al restablecer la contraseña"
   /partidos:
     get:
       summary: Obtener todos los partidos
